# TP-FINAL-SO

./: CMakeLists.txt  README.md  base de dato.txt  build.sh  server1tcp.c
client/: client.c  client.h  getnum.h  getnum2.c  main.c  response.c  response.h  response_parser.c  response_parser.h
common/: list.h  protocol.h  utils.c  utils.h
database/: db_functions.c  db_functions.h  main.c  parser.c  parser.h  request.c  request.h  request_parser.c  request_parser.h
docs/: multiline.dot  request.dot
server/: main.c  server.c  server.h
src/: db_functions.c  db_functions.h  list.c  main.c  multiline_parser.c  multiline_parser.h  protocol.c  protocol.h  utils.c
src/client/: client.c  client.h  getnum.c  getnum.h  main.c  response.c  response.h  response_parser.c  response_parser.h
src/database/: db_functions.c  db_functions.h  main.c  request.c  request.h  request_parser.c  request_parser.h
src/server/: main.c  server.c  server.h
tests/: CMakeLists.txt  execve_test.c  list_test.c  main.c  request_parser_test.c  request_parser_test.h  request_test.c  response_parser_test.c  response_parser_test.h  response_test.c  threads_test.c
